Add axios and send all api request to express server

--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "proxy": {
-    "/api": {
+    "/api/*": {
       "target": "http://localhost:5000/"
     }
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
