--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.1",
     "validator": "^9.1.1"
   },
   "devDependencies": {
+    "jest": "^21.2.1",
     "nodemon": "^1.12.1"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/__test__/run_test.js"
   }
 }
