--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^3.5.0",
+    "jsonwebtoken": "^8.1.0",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.1",
