--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^3.5.0",
-    "jsonwebtoken": "^8.1.0",
+    "email-validator": "^1.1.1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.1",
     "validator": "^9.1.1"
