--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "test": "jest --watch"
   },
   "keywords": [],
@@ -25,10 +24,10 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
-    "helmet": "^3.9.0",
-    "jsonwebtoken": "^8.1.0",
+    "helmet": "^3.10.0",
+    "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.4",
-    "mongoose": "^4.13.7",
+    "mongoose": "^5.0.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^3.0.1",
@@ -37,13 +36,13 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
-    "eslint": "^4.13.1",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^21.2.1",
-    "nodemon": "^1.14.1",
+    "nodemon": "^1.14.11",
     "supertest": "^3.0.0"
   }
 }
