--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.13.7",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "validator": "^9.2.0"
