--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
     "/auth/google": {
       "target": "http://localhost:5000/"
     },
+    "/auth/facebook": {
+      "target": "http://localhost:5000/"
+    },
     "/logout": {
       "target": "http://localhost:5000"
     },
