--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
     "comma-dangle": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/newline-after-import": "off",
-    "object-curly-newline": "off"
+    "object-curly-newline": "off",
+    "consistent-return": "off",
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   },
   "env": {
     "node": true,
