Proposal to use .env as our environment variables with `dotenv` module

--- a/package.json
+++ b/package.json
@@ -23,27 +23,28 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
-    "express": "^4.16.2",
-    "helmet": "^3.10.0",
-    "jsonwebtoken": "^8.1.1",
-    "lodash": "^4.17.4",
-    "mongoose": "^5.0.1",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "helmet": "^3.12.0",
+    "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.5",
+    "mongoose": "^5.0.13",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
-    "validator": "^9.2.0"
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
-    "eslint": "^4.16.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "^7.7.0",
     "jest": "^21.2.1",
-    "nodemon": "^1.14.11",
+    "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
   },
   "jest": {
